--- a/view/task/add.html
+++ b/view/task/add.html
@@ -38,7 +38,7 @@
         <div class="layui-form-item">
             <label class="layui-form-label">描述</label>
             <div class="layui-input-block">
-                <textarea name="content" rows="10" class="layui-textarea editor" placeholder="请输入描述"></textarea>
+                <textarea name="content" rows="10" class="layui-textarea" placeholder="请输入描述"></textarea>
             </div>
         </div>
 
