--- a/view/user/add.html
+++ b/view/user/add.html
@@ -18,7 +18,13 @@
             <label class="layui-form-label required">登录账户</label>
             <div class="layui-input-block">
                 <input type="text" name="username" class="layui-input" lay-verify="required" lay-reqtext="请输入登录账户" placeholder="请输入登录账户" value="">
-                <tip>填写登录账户。</tip>
+            </div>
+        </div>
+
+        <div class="layui-form-item">
+            <label class="layui-form-label required">用户姓名</label>
+            <div class="layui-input-block">
+                <input type="text" name="realname" class="layui-input" lay-verify="required" lay-reqtext="请输入用户姓名" placeholder="请输入用户姓名" value="">
             </div>
         </div>
 
@@ -26,7 +32,6 @@
             <label class="layui-form-label">用户手机</label>
             <div class="layui-input-block">
                 <input type="text" name="phone" class="layui-input" lay-reqtext="请输入用户手机" placeholder="请输入用户手机" value="">
-                <tip>填写用户手机。</tip>
             </div>
         </div>
 
