--- a/view/user/password.html
+++ b/view/user/password.html
@@ -6,7 +6,7 @@
         <div class="layui-form-item">
             <label class="layui-form-label required">登录账户</label>
             <div class="layui-input-block">
-                <input type="text" name="username" class="layui-input" readonly value="{$row.username|default=''}">
+                <input type="text" name="username" class="layui-input" readonly value="{{ .data.Username}}">
             </div>
         </div>
 
