--- a/view/doc/edit.html
+++ b/view/doc/edit.html
@@ -1,4 +1,4 @@
-{{ define "doc/add.html"}}
+{{ define "doc/edit.html"}}
 
 {{ template "header" .}}
 
@@ -8,7 +8,7 @@
         <div class="layui-form-item">
             <label class="layui-form-label">分类</label>
             <div class="layui-input-inline">
-                <select name="category" lay-verify="required" data-select="/api/doc-category.json" data-fields="id,title">
+                <select name="category" lay-verify="required" data-select="/api/doc-category.json" data-fields="id,title" data-value="{{.data.Category}}">
                 </select>
                 <input type="text" name="" class="layui-input">
                 <button type="button" class="layui-btn layui-btn-normal layui-btn-sm">按钮</button>
@@ -18,18 +18,18 @@
         <div class="layui-form-item">
             <label class="layui-form-label">标题</label>
             <div class="layui-input-block">
-                <input type="text" name="title" class="layui-input" lay-verify="required" placeholder="请输入标题" value="">
+                <input type="text" name="title" class="layui-input" lay-verify="required" placeholder="请输入标题" value="{{.data.Title}}">
             </div>
         </div>
 
         <div class="layui-form-item">
             <label class="layui-form-label">内容</label>
             <div class="layui-input-block">
-                <textarea name="content" rows="20" class="layui-textarea editor" placeholder="请输入描述"></textarea>
+                <textarea name="content" rows="20" class="layui-textarea editor" placeholder="请输入描述">{{.data.Content}}</textarea>
             </div>
         </div>
 
-        <input type="hidden" name="uid" value="1">
+        <input type="hidden" name="uid" value="{{.data.Uid}}">
         <div class="hr-line"></div>
         <div class="layui-form-item text-center">
             <button type="submit" class="layui-btn layui-btn-normal layui-btn-sm" lay-submit>确认</button>
