--- a/view/layout/default.html
+++ b/view/layout/default.html
@@ -11,7 +11,7 @@
     <script src="https://cdn.staticfile.org/html5shiv/r29/html5.min.js"></script>
     <script src="https://cdn.staticfile.org/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <link rel="stylesheet" href="/static/css/public.css?v={$version}" media="all">
+    <link rel="stylesheet" href="/static/css/public.css" media="all">
     <script>
         var action = "{{ .action }}"
         var autoloadjs = {{ .controller | jsExists }}
@@ -25,9 +25,9 @@
             VERSION: "1.0.0",
         };
     </script>
-    <script src="/static/plugs/layui-v2.5.6/layui.all.js?v={$version}" charset="utf-8"></script>
-    <script src="/static/plugs/require-2.3.6/require.js?v={$version}" charset="utf-8"></script>
-    <script src="/static/config-admin.js?v={$version}" charset="utf-8"></script>
+    <script src="/static/plugs/layui-v2.5.6/layui.all.js" charset="utf-8"></script>
+    <script src="/static/plugs/require-2.3.6/require.js" charset="utf-8"></script>
+    <script src="/static/config-admin.js" charset="utf-8"></script>
 </head>
 <body>
 {{ end }}
