--- a/view/task/add.html
+++ b/view/task/add.html
@@ -7,7 +7,7 @@
         <div class="layui-form-item">
             <label class="layui-form-label">项目</label>
             <div class="layui-input-block">
-                <select name="project" lay-verify="required" data-select="/api/task-project.json" data-fields="id,title">
+                <select name="project" lay-verify="required" data-select="/project/index" data-fields="id,title">
                 </select>
             </div>
         </div>
